--- a/validator/static/css/about.css
+++ b/validator/static/css/about.css
@@ -3,6 +3,11 @@
     text-align: center;
 }
 
+.align-right {
+    width: 10%;
+    text-align: right;
+}
+
 .partner_logo {
     height: 3rem;
     vertical-align: middle;
