--- a/validator/templates/validator/about.html
+++ b/validator/templates/validator/about.html
@@ -52,11 +52,21 @@
                 </td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td>
+                    <a href="#">Back to top</a>
+                </td>
+                <td class="align-right">
+                    Application version: {{ app_version }}
+                </td>
+            </tr>
+        </tfoot>
     </table>
 
-    <hr class="featurette-divider">
+    
 
-    <a href="#">Back to top</a>
+    
 
 </div>
 {% endblock %}
