Fix visual bug of map button if errors are displayed

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -317,9 +317,11 @@
                                             {% endfor %}
                                         </div>
 
-                                        <button type="button" title="Select on map" class="btn btn-primary" data-toggle="modal" data-target="#mapDialog">
-                                            <span class="fas fa-globe" ></span>
-                                        </button>
+                                        <div>
+                                            <button type="button" title="Select on map" class="btn btn-primary" data-toggle="modal" data-target="#mapDialog">
+                                                <span class="fas fa-globe" ></span>
+                                            </button>
+                                        </div>
 
                                         <div class="col-sm pr-0">
                                             <div class="input-group">
