--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -464,25 +464,22 @@
     </form>
 
 
-    <div class="modal" id="mapDialog">
-        <div class="modal-dialog modal-lg">
+    <div class="modal" id="mapDialog" role="dialog" aria-labelledby="mapDialogTitle" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
 
-                <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Select bounding box</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="my-0 font-weight-normal" id="mapDialogTitle">Select bounding box</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
                 </div>
 
-                <!-- Modal body -->
                 <div class="modal-body">
                     <div style="width: 760px; height: 400px;" id="spatialFilterMap"></div>
                 </div>
 
-                <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button id="setCoordinatesButton" type="button" onclick="setCoordinates()" class="btn btn-primary" id="useCoordinatesButton" data-dismiss="modal">Use coordinates</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button id="setCoordinatesButton" type="button" onclick="setCoordinates()" class="btn btn-primary">Use coordinates</button>
                 </div>
 
             </div>
